// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LabelItems renders empty 1`] = `
<div>
  <div
    class="sc-tagGq kPkkis"
  >
    <h5
      class="sc-kdBSHD bzLGJq"
    >
      Node labels
    </h5>
    <div
      class="sc-esYiGF dPgUnq"
    >
      <p>
        There are no labels in database
      </p>
    </div>
  </div>
</div>
`;

exports[`LabelItems renders labels 1`] = `
<div>
  <div
    class="sc-tagGq kPkkis"
  >
    <h5
      class="sc-kdBSHD bzLGJq"
    >
      Node labels
    </h5>
    <div
      class="sc-esYiGF dPgUnq"
    >
      <div
        class="sc-eqUAAy sc-fqkvVR kLxzLm yBSTM"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-eqUAAy sc-fqkvVR kLxzLm yBSTM"
        data-testid="sidebarMetaItem"
      >
        MyLabel
      </div>
      <div
        class="sc-eqUAAy sc-fqkvVR kLxzLm yBSTM"
        data-testid="sidebarMetaItem"
      >
        MyLabel2
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders empty 1`] = `
<div>
  <div
    class="sc-tagGq kPkkis"
  >
    <h5
      class="sc-kdBSHD bzLGJq"
    >
      Property keys
    </h5>
    <div
      class="sc-esYiGF dPgUnq"
    >
      <p>
        There are no properties in database
      </p>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders properties 1`] = `
<div>
  <div
    class="sc-tagGq kPkkis"
  >
    <h5
      class="sc-kdBSHD bzLGJq"
    >
      Property keys
    </h5>
    <div
      class="sc-esYiGF dPgUnq"
    >
      <div
        class="sc-eqUAAy sc-iGgWBj kLxzLm ctOoTb"
        data-testid="sidebarMetaItem"
      >
        prop1
      </div>
      <div
        class="sc-eqUAAy sc-iGgWBj kLxzLm ctOoTb"
        data-testid="sidebarMetaItem"
      >
        prop2
      </div>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders empty 1`] = `
<div>
  <div
    class="sc-tagGq kPkkis"
  >
    <h5
      class="sc-kdBSHD bzLGJq"
    >
      Relationship types
    </h5>
    <div
      class="sc-esYiGF dPgUnq"
    >
      <p>
        No relationships in database
      </p>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders relationshipTypes 1`] = `
<div>
  <div
    class="sc-tagGq kPkkis"
  >
    <h5
      class="sc-kdBSHD bzLGJq"
    >
      Relationship types
    </h5>
    <div
      class="sc-esYiGF dPgUnq"
    >
      <div
        class="sc-eqUAAy sc-dcJsrY kLxzLm gNHvxa"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-eqUAAy sc-dcJsrY kLxzLm gNHvxa"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE
      </div>
      <div
        class="sc-eqUAAy sc-dcJsrY kLxzLm gNHvxa"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE2
      </div>
    </div>
  </div>
</div>
`;
